Page aligned to center. Fixed absolute frame positions.

--- a/src/main/webapp/static/css/page-01.css
+++ b/src/main/webapp/static/css/page-01.css
@@ -5,6 +5,12 @@ body {
     text-align: center;
 }
 
+.page {
+    position: relative;
+    width: 1280px;
+    margin: 0 auto 0 auto;
+}
+
 img {
     z-index: -1;
 }
@@ -31,7 +37,7 @@ img {
 .lamp-01-mask {
     position: absolute;
     top: 170px;
-    left: 462px;
+    left: 426px;
     width: 236px;
     height: 565px;
     overflow: hidden;
@@ -60,7 +66,7 @@ img {
 .lamp-02-mask {
     position: absolute;
     top: 170px;
-    left: 705px;
+    left: 669px;
     width: 238px;
     height: 565px;
     overflow: hidden;
@@ -89,7 +95,7 @@ img {
 .lamp-03-mask {
     position: absolute;
     top: 170px;
-    left: 952px;
+    left: 916px;
     width: 234px;
     height: 564px;
     overflow: hidden;
@@ -98,7 +104,7 @@ img {
 .bubble-01 {
     position: absolute;
     top: 196px;
-    left: 735px;
+    left: 699px;
     width: 182px;
     height: 72px;
     color: #f5f5f5;
